--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -8,80 +8,177 @@
     <link rel="stylesheet" href="../web/pagesCss/index.css">
     <title>Home</title>
 </head>
-<body >
-    <div id="app">
-    <header>
-        <button v-on:click="showModal" class="flex flex-col border-none w-full items-center justify-center">
-            <img class="h-[3rem] w-[3rem] justify-end bg-white" src="../web/images/login.png" alt="images-Access">
-            <h1 class="font-bold">Sign in</h1>
-        </button>
-    </header>
-    <main >
-        <!-- Modal Login -->
-        <div  v-if="modalVisible"
-        class=" w-full  h-screen  bg-slate-400/40  fixed inset-0 z-10 flex justify-center items-center ">
-        <div class="w-11/12 h-auto md:w-3/4 md:h-3/4 flex justify-center items-center 
-         rounded-2xl bg-beige shadow-lg  text-blue hover:text-orange">
-            <div class=" w-full h-full flex flex-end flex-row-reverse ">
 
-                <div class="container" id="container">
-                    <div class="form-container sign-up-container">
-                        <button v-on:click="closeModal()" class=" w-10 h-10 mt-1 mr-2 z-40 absolute top-0 right-0">
-                            <img src="../web/images/cerrarmodal.png" class="bg-beige p-1 rounded-lg" alt="cerrarModal">
-                        </button>
-                        <form  action="#">
-                            <h2 class="font-bold mb-2 text-sm">Create Account</h2>
-                            <label for="firstName">First Name</label>
-                            <input @input="getfirstName" type="text" id="firstName" placeholder="First Name" />
-                            <label for="lastName">Last Name</label>
-                            <input @input="getlastName" type="text" id="lastName" placeholder="Last Name" />
-                            <label for="emailSignup">Email</label>
-                            <input @input="getEmail" type="email" id="emailSignup" placeholder="Email" />
-                            <label for="passwordSignup">Password</label>
-                            <div class="flex">
-                                <input @input="getPassword" type="password" id="passwordSignup" placeholder="Password" />
-                                <i class="far fa-eye cursor-pointer" @click="togglePassword()" id="togglePassword"></i>
+<body>
+    <div id="app">
+        <header class="h-[90px]">
+            <button v-on:click="showModal" class="flex flex-col border-none w-full items-center justify-center">
+                <img class="h-[3rem] w-[3rem] justify-end bg-white" src="../web/images/login.png" alt="images-Access">
+                <h1 class="font-bold">Sign in</h1>
+            </button>
+        </header>
+        <main>
+            <!-- Modal Login -->
+            <div v-if="modalVisible"
+                class=" w-full  h-screen  bg-slate-400/40  fixed inset-0 z-10 flex justify-center items-center ">
+                <div class="w-11/12 h-auto md:w-3/4 md:h-3/4 flex justify-center items-center 
+         rounded-2xl bg-beige shadow-lg  text-blue hover:text-orange">
+                    <div class=" w-full h-full flex flex-end flex-row-reverse ">
+                        <div class="container" id="container">
+                            <div class="form-container sign-up-container">
+                                <button v-on:click="closeModal()"
+                                    class=" w-10 h-10 mt-1 mr-2 z-40 absolute top-0 right-0">
+                                    <img src="../web/images/cerrarmodal.png" class="bg-beige p-1 rounded-lg"
+                                        alt="cerrarModal">
+                                </button>
+                                <form action="#">
+                                    <h2 class="font-bold mb-2 text-lg">Create Account</h2>
+                                    <label for="firstName">First Name</label>
+                                    <input class="bg-slate-300 border-none px-2 py-2 rounded-md w-[280px] my-1" @input="getfirstName" type="text" id="firstName" placeholder="First Name" />
+                                    <label for="lastName">Last Name</label>
+                                    <input class="bg-slate-300 border-none px-2 py-2 rounded-md w-[280px] my-1" @input="getlastName" type="text" id="lastName" placeholder="Last Name" />
+                                    <label for="emailSignup">Email</label>
+                                    <input class="bg-slate-300 border-none px-2 py-2 rounded-md w-[280px] my-1" @input="getEmail" type="email" id="emailSignup" placeholder="Email" />
+                                    <label for="passwordSignup">Password</label>
+                                    <div class="flex">
+                                        <input class="bg-slate-300 border-none px-2 py-2 rounded-md w-[280px] my-1" @input="getPassword" type="password" id="passwordSignup"
+                                            placeholder="Password" />
+                                        <i class="far fa-eye cursor-pointer" @click="togglePassword()"
+                                            id="togglePassword"></i>
+                                    </div>
+                                    <button class="px-2 mt-2" type="submit" @click.prevent="register()">Sign Up</button>
+                                </form>
                             </div>
-                            <button class="px-2 mt-2" type="submit" @click.prevent="register()">Sign Up</button>
-                        </form>
-                    </div>
-                    <div class="form-container sign-in-container">
-                        <button v-on:click="closeModal()" class="w-10 h-10 mt-1 mr-2 z-40 absolute top-0 right-0">
-                            <img src="../web/images/cerrarmodal.png" class="bg-beige p-1 rounded-lg" alt="cerrarModal">
-                        </button>
-                        <form  action="#">
-                            <h2 class="font-bold mb-2 text-sm">Sign in</h2>
-                            <label class="w-10" for="emailSignIn">Email</label>
-                            <input @input="getEmail" :value="email" type="email" id="emailSignIn" placeholder="Email" />
-                            <label for="passwordSignIn">Password</label>
-                            <div class="flex" >
-                            <input @input="getPassword" :value="password" type="password" id="passwordSignIn" placeholder="Password" />
-                            <i class="far fa-eye cursor-pointer" @click="togglePassword()" id="togglePassword"></i>
+                            <div class="form-container sign-in-container">
+                                <button v-on:click="closeModal()"
+                                    class="w-10 h-10 mt-1 mr-2 z-40 absolute top-0 right-0">
+                                    <img src="../web/images/cerrarmodal.png" class="bg-beige p-1 rounded-lg"
+                                        alt="cerrarModal">
+                                </button>
+                                <form action="#">
+                                    <h2 class="font-bold mb-2 text-lg">Sign in</h2>
+                                    <label class="w-10" for="emailSignIn">Email</label>
+                                    <input class="bg-slate-300 border-none px-2 py-2 rounded-md w-[280px] my-1" @input="getEmail" :value="email" type="email" id="emailSignIn"
+                                        placeholder="Email" />
+                                    <label for="passwordSignIn">Password</label>
+                                    <div class="flex">
+                                        <input class="bg-slate-300 border-none px-2 py-2 rounded-md w-[280px] my-1" @input="getPassword" :value="password" type="password"
+                                            id="passwordSignIn" placeholder="Password" />
+                                        <i class="far fa-eye cursor-pointer" @click="togglePassword()"
+                                            id="togglePassword"></i>
+                                    </div>
+                                    <button class="px-2 mt-2" type="submit" @click.prevent="signin()">Sign In</button>
+                                </form>
                             </div>
-                            <button class="px-2 mt-2" type="submit" @click.prevent="signin()">Sign In</button>
-                        </form>
-                    </div>
-                    <div class="overlay-container">
-                        <div class="overlay">
-                            <div class="overlay-panel overlay-left">
-                                <h1>Welcome Back!</h1>
-                                <p>To keep connected with us please login with your personal info</p>
-                                <button @click="signInButton" class="px-2 mt-2 ghost">Sign In</button>
-                            </div>
-                            <div class="overlay-panel overlay-right">
-                                <h1>Hello, Friend!</h1>
-                                <p>Enter your personal details and start journey with us</p>
-                                <button @click="signUpButton" class="px-2 mt-2 ghost">Sign Up</button>
+                            <div class="overlay-container">
+                                <div class="overlay">
+                                    <div class="overlay-panel overlay-left">
+                                        <h1>Welcome Back!</h1>
+                                        <p>To keep connected with us please login with your personal info</p>
+                                        <button @click="signInButton" class="px-2 mt-2 ghost">Sign In</button>
+                                    </div>
+                                    <div class="overlay-panel overlay-right">
+                                        <h1>Hello, Friend!</h1>
+                                        <p>Enter your personal details and start journey with us</p>
+                                        <button @click="signUpButton" class="px-2 mt-2 ghost">Sign Up</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
         </main>
-        <footer class=" pt-5 ">
-            <h2 class="text-center text-2xl">All rights reserved</h2>
+        <footer class="bg-white dark:bg-black">
+            <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+                <div class="md:flex md:justify-between">
+                    <div class="flex items-center mb-6 md:mb-0">
+                        <img src="./images/favicon.png" class="h-8 me-3" alt="Logo" />
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Unity
+                            Bank</span>
+                    </div>
+                    <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                        <div>
+                            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources
+                            </h2>
+                            <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                                <li class="mb-4">
+                                    <a href="#" class="hover:underline">Vue Js</a>
+                                </li>
+                                <li>
+                                    <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow us
+                            </h2>
+                            <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                                <li class="mb-4">
+                                    <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Github</a>
+                                </li>
+                                <li>
+                                    <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
+                            <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                                <li class="mb-4">
+                                    <a href="#" class="hover:underline">Privacy Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <hr class="my-6 border-gray-200 sm:mx-auto dark:border-orange-600 lg:my-8" />
+                <div class="sm:flex sm:items-center sm:justify-between">
+                    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 UNITY BANK. All Rights
+                        Reserved.
+                    </span>
+                    <div class="flex mt-4 sm:justify-center sm:mt-0">
+                        <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                            <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor" viewBox="0 0 8 19">
+                                <path fill-rule="evenodd"
+                                    d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <span class="sr-only">Facebook page</span>
+                        </a>
+                        <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                            <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor" viewBox="0 0 21 16">
+                                <path
+                                    d="M16.942 1.556a16.3 16.3 0 0 0-4.126-1.3 12.04 12.04 0 0 0-.529 1.1 15.175 15.175 0 0 0-4.573 0 11.585 11.585 0 0 0-.535-1.1 16.274 16.274 0 0 0-4.129 1.3A17.392 17.392 0 0 0 .182 13.218a15.785 15.785 0 0 0 4.963 2.521c.41-.564.773-1.16 1.084-1.785a10.63 10.63 0 0 1-1.706-.83c.143-.106.283-.217.418-.33a11.664 11.664 0 0 0 10.118 0c.137.113.277.224.418.33-.544.328-1.116.606-1.71.832a12.52 12.52 0 0 0 1.084 1.785 16.46 16.46 0 0 0 5.064-2.595 17.286 17.286 0 0 0-2.973-11.59ZM6.678 10.813a1.941 1.941 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.919 1.919 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Zm6.644 0a1.94 1.94 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.918 1.918 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Z" />
+                            </svg>
+                            <span class="sr-only">Discord community</span>
+                        </a>
+                        <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                            <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor" viewBox="0 0 20 17">
+                                <path fill-rule="evenodd"
+                                    d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <span class="sr-only">Twitter page</span>
+                        </a>
+                        <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                            <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <span class="sr-only">GitHub account</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
