--- a/src/main/resources/static/web/pages/loan-application.html
+++ b/src/main/resources/static/web/pages/loan-application.html
@@ -24,58 +24,44 @@
         <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
                 alt="cerrar sesion"></a>
     </header>
-    <main class="h-screen justify-center items-center">
-      <div class="w-full h-full flex items-center justify-center">
-        <section class="text-black w-[400px] p-2  flex flex-col justify-around gap-8 items-center rounded-2xl">
-          <div class="h-full">
-            <div class="flex flex-col md:flex-row-reverse h-full text-center justify-center items-center gap-4">
-              <form @submit.prevent="createLoan()" class="flex flex-col gap-4 z-50">
-                <div>
-                  <label class="font-bold"> Choose Loan:
-                    <select required class="text-center" v-model="selectedLoan" @change="searchPayments()">
-                      <option disabled value="0">Select Loan</option>
-                      <template v-if="loans.length != 0" v-for="loan of loans">
-                        <option :value="loan.id">{{loan.name}}</option>
-                      </template>
-                    </select>
-                  </label>
-                </div>
-                <div>
-                  <label class="font-bold">Choose Account:
-                    <select required class="text-center" v-model="selectedAccount">
-                      <option disabled value="0">Select Account</option>
-                      <template v-if="accounts.length != 0" v-for="account of accounts">
-                        <option>{{account.number}}</option>
-                      </template>
-                    </select>
-                  </label>
-                </div>
-                <div class="flex flex-col">
-                  <label class="font-bold"> Enter Amount:
-                    <input class="w-full text-center" required  type="text" v-model="amount">
-                  </label>
-                  <label v-show="selectedLoan != 0">
-                    <small>Max amount:{{formatBudget(loanAmount)}}</small>
-                  </label>
-                </div>
-                <div v-show="selectedLoan != 0">
-                  <label class="font-bold">Choose payments:
-                    <select required class="text-center" v-model="selectedPayments">
-                      <option disabled value="0">Select payments</option>
-                      <template v-if="payments.length != 0" v-for="payment of payments">
-                        <option>{{payment}}</option>
-                      </template>
-                    </select>
-                  </label>
-                </div>
-                <button type="submit" class="bg-orange-400 py-2 rounded-lg font-bold text-xl">
-                  Request Loan</button>
-              </form>
-            </div>
+    <main class=" min-h-screen flex justify-center items-center">
+      <form class="max-w-md mx-auto bg-white p-6 rounded-md shadow-lg sm:w-[600px]">
+          <h1 class="text-2xl font-bold mb-4 text-center text-orange-600">Apply for a loan</h1>
+          <div class="mb-4">
+              <label class="block text-sm font-medium text-gray-600">Type of loan:</label>
+              <select @Change="Payments" v-model="selectLoan"
+                  class="mt-1 block w-full p-2 border border-gray-300 rounded-md ">
+                  <option selected disabled value="1">Select Loan</option>
+                  <template v-if="data.length > 0" v-for="loan in data">
+                      <option :value="loan.id">{{loan.name}}({{"$"+loan.maxAmount}})</option>
+                  </template>
+              </select>
           </div>
-        </section>
-      </div>
-    </main>
+          <div class="mb-4">
+              <label class="block text-sm font-medium text-gray-600">Select your Payments:</label>
+              <select class="mt-1 block w-full p-2 border border-gray-300 rounded-md" v-model="payments">
+                  <option selected disabled value="1">Select Payment</option>
+                  <template v-for="Payment in paymentsFilter.payments">
+                      <option :value="Payment">{{Payment}}</option>
+                  </template>
+              </select>
+          </div>
+          <div class="mb-4">
+              <label for="amount" class="block text-sm font-medium text-gray-600">Amount:</label>
+              <input v-model="amount" type="text" required placeholder="Enter amount" class="w-full px-4 py-2 rounded-md border border-gray-300">
+          </div>
+          <div class="mb-4">
+              <label for="account" class="block text-sm font-medium text-gray-600">Destination Account
+                  Number:</label>
+              <input v-model="accountDest" placeholder="Enter account" type="text" required class="w-full px-4 py-2 rounded-md border border-gray-300">
+          </div>
+          <div>
+              <button v-on:click="createLoans()" type="button"
+                  class="w-full p-2 bg-orange-600 text-white rounded-md focus:outline-none focus:ring focus:border-blue-300">
+                  Request Loan</button>
+          </div>
+      </form>
+  </main>
     <footer class=" bg-black ">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
